k8s/apps/iot/mosquitto/app/ingress-route-tcp.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: mosquitto-tcp
  namespace: iot
spec:
  entryPoints:
    - mqtts
  routes:
  - match: HostSNI(`*`)
    priority: 10
    services:
    - name: mosquitto
      port: 8883
      nativeLB: true
  tls:
     passthrough: true
