k8s/apps/iot/mosquitto/app/tcp-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: mosquitto-tcp
  namespace: iot
spec:
  entryPoints:
    - mqtt
  routes:
    - match: HostSNI(`*`)
      priority: 10
      services:
        - name: mosquitto
          port: 1883
