k8s/apps/iot/mosquitto/app/tls-tcp-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: mosquitto-tcp-tls
  namespace: iot
spec:
  entryPoints:
    - mqtts
  routes:
    - match: HostSNI(`*`)
      priority: 10
      services:
        - name: mosquitto
          port: 8883
  tls:
    passthrough: true
